--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@testing-library/react": "8.0.4",
     "contentful-cli": "1.2.12",
     "cssnano": "4.1.10",
-    "eslint": "^6.0.1"
+    "eslint": "^6.8.0",
+    "eslint-plugin-react-hooks": "^2.5.1"
   },
   "scripts": {
     "start": "contentful-extension-scripts start --serve-only",
@@ -24,16 +25,35 @@
     "test:ci": "contentful-extension-scripts test --env=jsdom"
   },
   "dependencies": {
-    "@contentful/forma-36-fcss": "0.0.31",
-    "@contentful/forma-36-react-components": "^3.18.4",
+    "@contentful/field-editor-boolean": "0.2.0",
+    "@contentful/field-editor-checkbox": "0.4.0",
+    "@contentful/field-editor-date": "^0.4.0",
+    "@contentful/field-editor-dropdown": "0.3.0",
+    "@contentful/field-editor-json": "0.1.0",
+    "@contentful/field-editor-list": "0.5.0",
+    "@contentful/field-editor-location": "0.1.2",
+    "@contentful/field-editor-multiple-line": "0.3.0",
+    "@contentful/field-editor-number": "0.3.0",
+    "@contentful/field-editor-radio": "0.2.0",
+    "@contentful/field-editor-rating": "0.2.0",
+    "@contentful/field-editor-shared": "0.3.0",
+    "@contentful/field-editor-single-line": "0.3.0",
+    "@contentful/field-editor-tags": "0.3.0",
+    "@contentful/field-editor-url": "0.2.0",
+    "@contentful/forma-36-fcss": "^0.0.31",
+    "@contentful/forma-36-react-components": "^3.22.0",
     "@contentful/forma-36-tokens": "^0.4.5",
-    "contentful-ui-extensions-sdk": "^3.10.6",
-    "emotion": "^10.0.17",
+    "contentful-ui-extensions-sdk": "3.10.0",
+    "draft-js": "^0.11.5",
+    "emotion": "^10.0.27",
+    "formik": "^2.1.4",
     "hex-rgb": "^4.1.0",
+    "lodash": "^4.17.15",
     "lodash.camelcase": "^4.3.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "yup": "^0.28.3"
   },
   "browserslist": [
     "last 5 Chrome version",
