Create temp serial- and deserializers for richtext
Created tempory serial and deserializers for converting contentful richtext to draftjs and back. For contentful to draftjs, I convert contentful rich text to html, then import the html into draftjs. For exporting, I convert the draftjs content into md, and convert md into contentful richtext utilizing one of the packages in contentful's richtext repo. Import works perfect, except for entry links and references, while export sometimes messes up the new line characters after.

--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "@contentful/forma-36-fcss": "^0.0.31",
     "@contentful/forma-36-react-components": "^3.22.0",
     "@contentful/forma-36-tokens": "^0.4.5",
+    "@contentful/rich-text-from-markdown": "^13.4.0",
     "@contentful/rich-text-html-renderer": "^13.4.0",
     "contentful-ui-extensions-sdk": "3.10.0",
     "draft-js": "^0.11.5",
+    "draftjs-md-converter": "^1.4.0",
     "emotion": "^10.0.27",
     "formik": "^2.1.4",
     "hex-rgb": "^4.1.0",
