--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-select": "^3.1.0",
     "yup": "^0.28.3"
   },
   "browserslist": [
